# buildguard

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  NOOR_DESIGN.md  README.md  ROTATE_SECRETS.md  SECURITY_CHECKLIST.md  pyproject.toml  supabase_schema.sql  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
.hermes/desktop-attachments/: Removed Apps.html
backend/: Dockerfile  Dockerfile.railway  main.py  pyproject.toml  railpack.toml  requirements.txt  utils.py
backend/tests/: test_gaps.py  test_utils.py
frontend/: Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/[id]/: page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/auth/[action]/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/health/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: FileUploadZone.tsx  LoadingSpinner.tsx  Navbar.tsx  RiskBadge.tsx
frontend/e2e/: analysis.spec.ts  auth.spec.ts  upload.spec.ts
frontend/e2e/fixtures/: generate_fixtures.ts
frontend/lib/: api.ts
scripts/: post_deploy_check.sh  set_railway_env.sh  set_vercel_env.sh
