[project]
name = "buildguard-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",
    "supabase==2.5.0",
    "httpx==0.27.0",
    "pdfplumber==0.9.0",
    "python-jose==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "python-docx==1.1.2",
    "pydantic==2.7.1",
    "sentry-sdk[fastapi]>=2.0.0",
    "upstash-redis>=1.0.0",
    "pymupdf>=1.24.0",
    "langdetect>=1.0.9",
]

[project.scripts]
start = "uvicorn:main"

[tool.railpack]
start_cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
